# wasm-examples

counter/: Cargo.toml
counter/src/: lib.rs
dex/: Cargo.toml
dex/src/: lib.rs
emoji_id/: Cargo.toml
emoji_id/src/: lib.rs
hello_world/: Cargo.toml
hello_world/src/: lib.rs
hello_world/tests/: test.rs
nft/: Cargo.toml
nft/src/: lib.rs
train-hotel/: Cargo.toml
train-hotel/src/: lib.rs
