[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_template_abi = { git = "https://github.com/tari-project/tari.git", branch="development", package="tari_template_abi" }
tari_template_lib = { git = "https://github.com/tari-project/tari.git", branch="development", package="tari_template_lib" }
tari_template_macros = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_template_macros" }
log = "*"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
tari_dan_engine = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_dan_engine" }
tari_crypto = {git = "https://github.com/tari-project/tari-crypto.git", tag="v0.15.3" }
tari_dan_common_types = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_dan_common_types" }
tari_common_types = {git = "https://github.com/tari-project/tari.git", branch="development", package="tari_common_types" }
